syntax = "proto3";

package grpc.rococo;

option java_multiple_files = true;
option java_package = "grpc.rococo";
option java_outer_classname = "MuseumProto";

service MuseumService {
    rpc AllMuseums(AllMuseumsRequest) returns (MuseumsPageResponse) {}
    rpc MuseumById(MuseumsIdRequest) returns (MuseumResponse) {}
    rpc AddMuseum(MuseumRequest) returns (MuseumResponse) {}
    rpc UpdateMuseum(MuseumUpdateRequest) returns (MuseumResponse) {}
}

message AllMuseumsRequest {
    string search_query = 1;
    MuseumsPageRequest pageable = 2;
}

message MuseumsPageRequest {
    int32 page = 1;
    int32 size = 2;
}

message MuseumsIdRequest {
    string id = 1;
}

message MuseumsPageResponse {
    repeated MuseumResponse museums = 1;
}

message MuseumRequest {
    string title = 1;
    string description = 2;
    string city = 3;
    string photo = 4;
    string country_id = 5;
}

message MuseumUpdateRequest {
    string id = 1;
    string title = 2;
    string description = 3;
    string city = 4;
    string photo = 5;
    string country_id = 6;
}

message MuseumResponse {
    string id = 1;
    string title = 2;
    string description = 3;
    string city = 4;
    string photo = 5;
    string country_id = 6;
}